2005-11-09  P. S. Chakravarthi <pchakravarthi@novell.com>

	Fixes #314638
	* e-categories-config.c (e_categories_config_get_icon_for):
	added a g_object_unref to unref the GdkPixBuff object created
	in this function.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* e-util.c (e_mkdir_hier): cast warning, good ol win32 patches.
	(e_strftime): fix some clahey-code to use the right variable and
	not try to modify const strings by stealth.

	* eggtrayicon.h: add missing prototype.

	* e-gui-utils.c (e_create_image_widget): remove unused pixbuf.

	* e-dialog-utils.c (dialog_realized): fix cast.
	(e_dialog_set_transient_for_xid): same.
	(e_file_dialog_save): fix cases for build.

	* e-categories-config.c
	(e_categories_config_open_dialog_for_entry): cast & use right type
	for text.
	(icons_table[]): remove unused.

	* e-account-list.c (e_account_list_remove_account_proxies): cast
	to fix warning.

2005-08-18  David Malcolm  <dmalcolm@redhat.com>

	* e-plugin.c (ep_set_enabled): Fix compiler warning on early bailout

2005-08-18  Tor Lillqvist  <tml@novell.com>

	* e-iconv.c (e_iconv_init): Use g_get_charset() on Win32 to get
	locale charset. Free return value from g_win32_getlocale().

2005-08-10  Tor Lillqvist  <tml@novell.com>

	* e-xml-utils.c (e_xml_get_child_by_name_by_lang): Use
	g_win32_getlocale() to get locale on Win32. (setlocale() returns
	strings like "Swedish_Finland.1252", we want the Unixish "sv_FI"
	style.) Fix typo, use the lang parameter and not "lang" string
	literal.

	* Makefile.am: Use privsolib instead of privlib. On Unix they are
	the same, on Win32 privsolibdir is the same as libdir.
	(INCLUDES): Pass also EVOLUTION_SYSCONFDIR, EVOLUTION_DATADIR,
	EVOLUTION_LIBDIR, EVOLUTION_LIBEXECDIR and EVOLUTION_SOUNDDIR so
	that the Win32 run-time path lookup code in e-win32-reloc.c can
	handle them, too.

	* e-win32-reloc.c: Handle also the above, and the bare PREFIX.

	* e-util-private.h: Ditto here. (PREFIX, SYSCONFDIR, DATADIR and