@@ -45,7 +45,7 @@
 #include "e-util-private.h"
 
 int
-g_str_compare (const void *x, const void *y)
+e_str_compare (const void *x, const void *y)
 {
 	if (x == NULL || y == NULL) {
 		if (x == y)
@@ -58,7 +58,20 @@ g_str_compare (const void *x, const void *y)
 }
 
 int
-g_collate_compare (const void *x, const void *y)
+e_str_case_compare (const void *x, const void *y)
+{
+	if (x == NULL || y == NULL) {
+		if (x == y)
+			return 0;
+		else
+			return x ? -1 : 1;
+	}
+	
+	return g_utf8_collate (g_utf8_casefold (x, -1), g_utf8_casefold (y, -1));
+}
+
+int
+e_collate_compare (const void *x, const void *y)
 {
 	if (x == NULL || y == NULL) {
 		if (x == y)
@@ -71,7 +84,7 @@ g_collate_compare (const void *x, const void *y)
 }
 
 int
-g_int_compare (const void *x, const void *y)
+e_int_compare (const void *x, const void *y)
 {
 	if (GPOINTER_TO_INT (x) < GPOINTER_TO_INT (y))
 		return -1;
