@@ -254,7 +254,7 @@ create_table (void)
 		ETableCol *ecol = e_table_col_new (
 						   i, headers [i],
 						   1.0, 20, cell_left_just,
-						   g_str_compare, TRUE);
+						   e_str_compare, TRUE);
 		/* Add it to the header. */
 		e_table_header_add_column (e_table_header, ecol, i);
 	}
